kubernetes-templates/open-vpn/1/openvpn-openvpn-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    chart: openvpn-1.0.0
  name: openvpn-openvpn
  namespace: default
spec:
  clusterIP: ${OPEN_VPN_CLUSTER_IP}
  ports:
  - name: openvpn
    nodePort: 31458
    port: ${OPEN_VPN_PORT}
    protocol: TCP
    targetPort: 443
  selector:
    app: openvpn-openvpn
  sessionAffinity: None
  type: LoadBalancer
